# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Rewrote mysql-brute to use brute library [Aleksandar Nikolic]

o Fixed the greppable output of hosts that time-out (when --host-timeout was
  used and the host timed-out after something was received from that host).
  This issue was reported by Matthew Morgan. [jah]

o [Zenmap] Added Japanese translation by Yuji Tounai.

o [NSE] Added the script icap-info, which tries to identify common ICAP
  service names and list service and tag information. [Patrik Karlsson]

o [NSE] Added the script http-traceroute, which exploits the
  Max-Forwards HTTP header to detect reverse proxies. [Hani Benhabiles]

o Added the script distcc-CVE-2004-2687 that checks and exploits a remote
  command execution vulnerability in distcc. [Patrik Karlsson]

o Added two new scripts mysql-query and mysql-dump-hashes, which add support
  for performing custom MySQL queries and dump MySQL password hashes. [Patrik
  Karlsson]

o Improved the mysql library to handle multiple columns with the same name,
  added a formatResultset function to format a query response to a table
  suitable for script output. [Patrik Karlsson]

o The message "nexthost: failed to determine route to ..." is now a
  warning rather than a fatal error. Addresses that are skipped in
  this way are recorded in the XML output as <target> elements. [David
  Fifield]

o [NSE] Added the script http-drupal-modules, which enumerates the installed
  Drupal modules using drupal-modules.lst. [Hani Benhabiles]

o [NSE] Added http-vuln-cve2012-1823.nse, which checks for PHP CGI
  installations with a remote code execution vulnerability. [Paulino
  Calderon]

o [NSE] Added the script dict-info, which retrieves information from a
  DICT server, by issuing the SHOW SERVER command. [Patrik Karlsson]

o [NSE] Added the script gkrellm-info, which displays information retrieved
  from the GKRellm monitoring service. [Patrik Karlsson]
